...
  @override
  Widget build(BuildContext context) {
    bool anon = currentUser!.isAnonymous;
    return MaterialApp(
      home: Scaffold(
        appBar: AppBar(
          title: Text('Settings'),
          backgroundColor: Colors.indigo[400],
        ),
        body: FutureBuilder<DocumentSnapshot>(
            future: users.doc(currentUser!.uid).get(),
            builder: (context, snapshot) {
              if (snapshot.hasError) { 
...
                              }
                              showAlertDialog('Success! Password updated');
                            }
                          )
                        ],
                      ) : ElevatedButton(
                        child: Text('Register'),
                        style: ButtonStyle(backgroundColor: MaterialStateProperty.all<Color>(Colors.indigo)),
                        onPressed: () {
                          Navigator.push(
                            context,
                            MaterialPageRoute(builder: (context) => EmailSignUp()));
                        }
...
                          _googleSignIn.signOut();
                          Navigator.push(
                              context,
                              MaterialPageRoute(
                                  builder: (context) => Authenticate()));
                        },
                        child: Text('Logout', style: TextStyle(color: Colors.white)),
                        color: Colors.indigo,
                      )
                    ],
                  ),
                );
              }

              return Center(
                  child: CircularProgressIndicator(
                semanticsLabel: 'Loading...',
              ));
            }),
        drawer: Drawer(
          child: ListView(
            // Important: Remove any padding from the ListView.
            padding: EdgeInsets.zero,
            children: <Widget>[
              DrawerHeader(
                decoration: BoxDecoration(
...
        .set({
          'firstname': data['firstname'],
          'isAdmin': data['isAdmin'],
          'regDateTime': DateTime.now(),
          'email': emailController.text,
          'lastname': data['lastname'],
          'username': data['username'],
          //'profile_pic': data['profile_pic']
        })
        .then((value) => '')
        .onError((error, stackTrace) => error.toString());
  }
  Future<String> updateUserInfoPro(Map<String, dynamic> data) async {
...
